src/test/deca/syntax/invalid/objet/BadExtends.deca
class A extends ; {
    int x;
    int y;
}
{
    A a = new A();
    a.x;
    a.y;
}